# Mp4ToRtsp

./: CMakeLists.txt  FFMpegWrapper.cpp  FFMpegWrapper.h  H264ToSrt.cpp  LICENSE  README.md  StreamToSrt.cpp  StreamToSrt2.cpp  main.cpp  main_srt.cpp  main_udp.cpp
thirdpart/rtspserver/lib/: RtspSever.lib
thirdpart/srt/lib/: srt.lib
thirdpart/srt/lib/pkgconfig/: haisrt.pc
